# GED

./: .gitignore  CMakeLists.txt  GEDSolver.cpp  GEDSolver.h  GEDSolver_test.cpp  Graph.cpp  Graph.h  GraphTreeSolver.cpp  GraphTreeSolver.h  GraphTreeSolver_test.cpp  IPSolver.cpp  IPSolver.h  IPsolver_test.cpp  Model.cpp  Model.h  Simplex.cpp  Simplex.h  SimplexTest.cpp  TreeSolver.cpp  TreeSolver.h  TreeSolver_test.cpp  main.cpp  main.h
data/: GEDTree  README  README~  acyclic_ans.csv  alkane_ans.csv  compare.py  evalutaion.py  getDataSet.py  getMUTA.py  get_answers.py  mao.csv  muta_ans.csv  pah_ans.csv  run.py  run_run_std.py  run_std.py
data/CMU-GED/: CMU-all-pairs.csv
data/CMU-GED/CMU/: house.seq0.gxl  house.seq1.gxl  house.seq10.gxl  house.seq100.gxl  house.seq101.gxl  house.seq102.gxl  house.seq103.gxl  house.seq104.gxl  house.seq105.gxl  house.seq106.gxl  house.seq107.gxl  house.seq108.gxl  house.seq109.gxl  house.seq11.gxl  house.seq110.gxl  house.seq12.gxl  house.seq13.gxl  house.seq14.gxl  house.seq15.gxl  house.seq16.gxl  house.seq17.gxl  house.seq18.gxl  house.seq19.gxl  house.seq2.gxl  house.seq20.gxl  house.seq21.gxl  house.seq22.gxl  house.seq23.gxl  house.seq24.gxl  house.seq25.gxl  house.seq26.gxl  house.seq27.gxl  house.seq28.gxl  house.seq29.gxl  house.seq3.gxl  house.seq30.gxl  house.seq31.gxl  house.seq32.gxl  house.seq33.gxl  house.seq34.gxl  (+71 more)
data/GREC-GED/GREC-subsets/: mixed-graphs.cxl  train10.cxl  train15.cxl  train20.cxl  train5.cxl
data/MUTA-GED/Mutagenicity-subsets/: mixed-graphs.cxl  train10.cxl  train20.cxl  train30.cxl  train40.cxl  train50.cxl  train60.cxl  train70.cxl
data/best_cost/: acyclic.csv  alkane.csv  mao.csv  muta10.csv  muta20.csv  muta30.csv  muta40.csv  muta50.csv  muta60.csv  muta70.csv  mutamix.csv  pah.csv
